# tcc

./: .gitignore  Cargo.toml  README.md  input.c  production_rules.txt
src/: codegen.rs  main.rs  parser.rs  tac.rs  tokenizer.rs  types.rs
src/codegen/: asm_gen.rs  binop.rs  builtin_functions.rs  expr_codegen.rs  for_loop_codegen.rs  functions.rs  putchar.rs  reg.rs  register_allocator.rs  unop.rs
src/errors/: check_bin_op_exprs.rs  check_funcs.rs  check_types.rs  check_vars.rs  display.rs  mod.rs
src/parser/: arr_initializer_expr.rs  const_eval.rs  expr_parser.rs  factor_parser.rs  for_loop_parser.rs  function_arg_decl.rs  global_strings.rs  token_cursor.rs  types_parser.rs
src/tac/: array_init_expr.rs  expr.rs  identifier.rs  loops.rs  prefix_postfix_inc_dec.rs  tac_func.rs  tac_instr.rs
src/tac/generation/: array_init_expr.rs  binop.rs  break_stmt.rs  continue_stmt.rs  declare.rs  for_loop.rs  if_stmt.rs  mod.rs  prefix_postfix_inc_dec.rs  short_circuiting.rs  ternary.rs  while_loop.rs
src/tokenizer/: mod.rs  operator.rs  source_cursor.rs
tests/: assert_fail_invalid_progams.rs  compare_valid_programs.rs  integration_tests.rs
tests/programs/char_literals/: escaped.c  escaped2.c  hello_world.c  print_100_chars.c  putchar.c  simple_lit.c
tests/programs/comparisons/: add_2_chars_without_overflowing.c  add_int_and_char.c  char_overflowing.c  comapre_short_with_char.c  comapre_short_with_char_2.c  compare_longs.c  not_overflowing.c  promotion.c
tests/programs/compound_statements/: scoped_vars_basic.c  shadowing.c  stupid_brace_syntax.c
(+71 files in other folders)
