[package]
name = "tcc"
version = "0.1.0"
edition = "2021"
authors = ["Eric Wu"]
description = "A small program to compile a small subset of C programs"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
